# prj-22

./: README.md  pyproject.toml
lab01/: lab01.ipynb
lab01/configs/: data_path_configs.py
lab01/data/: corr.xlsx
lab01/getting_data/: import_data.py  upload_data.py
lab01/model/: linear_model.py  poly_model.py
lab01/plotting/: basic_plotting.py
